--- a/src/assets/Style/home.scss
+++ b/src/assets/Style/home.scss
@@ -58,10 +58,13 @@ p,
     position: absolute;
     right: 0%;
     top: 0%;
-    width: 300px;
+    width: 350px;
+    margin-top: -4.5rem;
+   
 
     > img {
-      width: 100%;
+      width: 80%;
+      
     }
   }
 
@@ -70,7 +73,7 @@ p,
     right: 0%;
     bottom: 0%;
     width: 300px;
-    height: 70%;
+    height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
