change the font

--- a/src/assets/Style/home.scss
+++ b/src/assets/Style/home.scss
@@ -35,7 +35,8 @@ p,
     top: 20%;
     left: 10%;
     font-size: 50px;
-    font-family: "Tilt Prism", cursive;
+    // font-family: "Tilt Prism", cursive;
+    font-family: 'Alumni Sans Inline One', sans-serif;
     color: rgb(0, 0, 0);
     // text-shadow: -8px 4px 4px rgba(246, 33, 5, 0.6);
     text-shadow: -8px 4px 4px rgba(202, 156, 246, 0.6);
